samples/_failures_safe/1761253424_c0a5c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c3dadf1.c: In function ‘main’:
./samples/SAFE/__tmp_5c3dadf1.c:146:29: error: expected expression at end of input
  146 |                             current_state =
      |                             ^~~~~~~~~~~~~
./samples/SAFE/__tmp_5c3dadf1.c:146:29: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5c3dadf1.c:146:29: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5c3dadf1.c:146:29: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5c3dadf1.c:146:29: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5c3dadf1.c:146:29: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5c3dadf1.c:146:29: error: expected declaration or statement at end of input
